updated footer logo, fixed missing members in team, fixed overflow for animation, color fixes, about ID

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -65,7 +65,7 @@
         top: 0;           
         right: 0;
         left: 0;
-        background-color: #000000b1;
+        background-color: #000000e8;
         z-index: -1;
         &.open {
             transform: translateX(0);
